--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -2,5 +2,8 @@
   "name": "@micode-ui/ts-config",
   "version": "0.0.0",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "publishConfig": {
+    "access": "public"
+  }
 }
