--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,7 +4,7 @@
   "description": "Nextra docs template",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next start",
+    "build": "next build",
     "start": "next start",
     "format": "prettier --write --plugin-search-dir=. **/*.{cjs,mjs,ts,tsx}"
   },
